✨ Feat(process-file): add rule on number of pages for rent receipt (#840)