@@ -11,6 +11,7 @@ import java.time.LocalDate;
 import java.time.YearMonth;
 import java.time.temporal.ChronoField;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -18,7 +19,7 @@ class RentalReceiptRulesValidationServiceTest {
 
     private final RentalReceiptRulesValidationService validationService = new RentalReceiptRulesValidationService();
 
-    private File buildValidDfFile(LocalDate period, LocalDate paymentDate) throws JsonProcessingException {
+    private File buildValidDfFile(LocalDate period, LocalDate paymentDate) {
 
         RentalReceiptFile parsedFile = RentalReceiptFile.builder()
                 .period(YearMonth.from(period))
@@ -35,6 +36,7 @@ class RentalReceiptRulesValidationServiceTest {
 
         return File.builder()
                 .parsedFileAnalysis(parsedFileAnalysis)
+                .numberOfPages(1)
                 .build();
     }
 
@@ -49,7 +51,7 @@ class RentalReceiptRulesValidationServiceTest {
         tenant.setApartmentSharing(as);
 
         LocalDate currentDate = LocalDate.now().with(ChronoField.DAY_OF_MONTH, 14);
-        Document doc = Document.builder()
+        return Document.builder()
                 .tenant(tenant)
                 .documentCategory(DocumentCategory.RESIDENCY)
                 .documentSubCategory(DocumentSubCategory.TENANT)
@@ -57,7 +59,6 @@ class RentalReceiptRulesValidationServiceTest {
                         buildValidDfFile(currentDate.minusMonths(3), currentDate),
                         buildValidDfFile(currentDate.minusMonths(4), currentDate)))
                 .build();
-        return doc;
     }
 
     Document buildRentalReceiptDocumentWithWrongMonths() throws JsonProcessingException {
@@ -77,6 +78,24 @@ class RentalReceiptRulesValidationServiceTest {
                 .files(Arrays.asList(buildValidDfFile(currentDate.minusMonths(4), currentDate),
                         buildValidDfFile(currentDate.minusMonths(5), currentDate),
                         buildValidDfFile(currentDate.minusMonths(6), currentDate)))
+                .build();
+    }
+
+    Document buildRentalReceiptDocumentWithOneMonth() throws JsonProcessingException {
+        Tenant tenant = Tenant.builder()
+                .firstName("Jean")
+                .lastName("DUPONT")
+                .build();
+        ApartmentSharing as = ApartmentSharing.builder().tenants(List.of(tenant)).build();
+        as.setApplicationType(ApplicationType.ALONE);
+        tenant.setApartmentSharing(as);
+
+        LocalDate currentDate = LocalDate.now();
+        return Document.builder()
+                .tenant(tenant)
+                .documentCategory(DocumentCategory.RESIDENCY)
+                .documentSubCategory(DocumentSubCategory.TENANT)
+                .files(Collections.singletonList(buildValidDfFile(currentDate.minusMonths(1), currentDate)))
                 .build();
     }
 
@@ -105,7 +124,20 @@ class RentalReceiptRulesValidationServiceTest {
 
         Assertions.assertThat(report.getAnalysisStatus()).isEqualTo(DocumentAnalysisStatus.DENIED);
         Assertions.assertThat(report.getBrokenRules()).hasSize(1);
-        Assertions.assertThat(report.getBrokenRules().get(0)).matches(docRule -> docRule.getRule() == DocumentRule.R_RENT_RECEIPT_MONTHS);
+        Assertions.assertThat(report.getBrokenRules().getFirst()).matches(docRule -> docRule.getRule() == DocumentRule.R_RENT_RECEIPT_MONTHS);
     }
 
+    @Test
+    void when_only_one_month_then_report_error() throws Exception {
+        Document document = buildRentalReceiptDocumentWithOneMonth();
+        DocumentAnalysisReport report = DocumentAnalysisReport.builder()
+                .document(document)
+                .brokenRules(new LinkedList<>())
+                .build();
+        validationService.process(document, report);
+
+        Assertions.assertThat(report.getAnalysisStatus()).isEqualTo(DocumentAnalysisStatus.DENIED);
+        Assertions.assertThat(report.getBrokenRules()).hasSize(2);
+        Assertions.assertThat(report.getBrokenRules().getFirst()).matches(docRule -> docRule.getRule() == DocumentRule.R_RENT_RECEIPT_NB_DOCUMENTS);
+    }
 }
